# supply-daddy

./: .env.example  .gitignore  generate_docs.py  hardhat.config.js  package-lock.json  package.json
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: AlertsPanel.tsx  AuthContext.tsx  BlockchainPanel.tsx  ETATimeline.tsx  GodMode.tsx  RoleSwitcher.tsx  RouteGraph.tsx  ShipmentPanel.tsx  SimulationBar.tsx  ThemeContext.tsx
client/app/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  tabs.tsx
client/app/lib/: apiFetch.ts  firebase.ts
client/app/login/: page.tsx
contracts/: ShipmentAnchor.sol
scripts/: deploy.js
server/: .gitignore  main.py  pyproject.toml  test_pdf_upload.py
server/config/: risk_policies.py
server/models/: shipment_model.py  telemetry_model.py  user_model.py
server/routes/: anomaly.py  auth.py  checkpoint.py  document.py  route.py  shipment.py
server/services/: auth_middleware.py  auth_service.py  blockchain_service.py  eta_engine.py  firebase_service.py  genai_service.py  pii_masking.py  risk_engine.py  route_graph.py
